[package]
name = "mapping-contract"
version = "0.1.0"
authors = ["Ben Kurrek <bkurrek@uwaterloo.ca>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.1.1"
serde_json = "1.0.91"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true